Covering bitwarden credentials

--- a/templates/bitwarden-secret.yaml.j2
+++ b/templates/bitwarden-secret.yaml.j2
@@ -4,6 +4,6 @@ metadata:
   name: bitwarden-secret
   namespace: bitwarden
 stringData:
-  BW_USER: "{{ bitwarden_user }}"
-  BW_PASS: "{{ bitwarden_password }}" 
-  BW_HOST: "{{ bitwarden_host }}" 
+  user: "{{ bitwarden_user }}"
+  password: "{{ bitwarden_password }}" 
+  host: "{{ bitwarden_host }}" 
